fix: update input and textarea focus styles for improved visibility and consistency

--- a/src/components/styled/input.css
+++ b/src/components/styled/input.css
@@ -29,49 +29,49 @@
     @apply border-primary;
     &:focus,
     &:focus-within {
-      @apply outline-primary border-primary shadow-primary;
+      @apply border-primary shadow-primary bg-primary/20;
     }
   }
   &-secondary {
     @apply border-secondary;
     &:focus,
     &:focus-within {
-      @apply outline-secondary border-secondary shadow-secondary;
+      @apply border-secondary shadow-secondary bg-secondary/20;
     }
   }
   &-accent {
     @apply border-accent;
     &:focus,
     &:focus-within {
-      @apply outline-accent border-accent shadow-accent;
+      @apply border-accent shadow-accent bg-accent/20;
     }
   }
   &-info {
     @apply border-info;
     &:focus,
     &:focus-within {
-      @apply outline-info border-info shadow-info;
+      @apply border-info shadow-info bg-info/20;
     }
   }
   &-success {
     @apply border-success;
     &:focus,
     &:focus-within {
-      @apply outline-success border-success shadow-success;
+      @apply border-success shadow-success bg-success/20;
     }
   }
   &-warning {
     @apply border-warning;
     &:focus,
     &:focus-within {
-      @apply outline-warning border-warning shadow-warning;
+      @apply border-warning shadow-warning bg-warning/20;
     }
   }
   &-error {
     @apply border-error;
     &:focus,
     &:focus-within {
-      @apply outline-error border-error shadow-error;
+      @apply border-error shadow-error bg-error/20;
     }
   }
   &:has(> input[disabled]),
